--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,21 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Vagrant
+.vagrant/
+
+# Visual Studio Code
+.vscode/
+
+# Flask stuff:
+instance/
+.webassets-cache
+
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -24,6 +33,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -45,6 +55,7 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
@@ -53,10 +64,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
+db.sqlite3
 
 # Scrapy stuff:
 .scrapy
@@ -79,13 +87,14 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
-# dotenv
+# Environments
 .env
-
-# virtualenv
 .venv
+env/
 venv/
 ENV/
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -99,13 +108,3 @@ ENV/
 
 # mypy
 .mypy_cache/
-
-.idea/
-*.iml
-.DS_Store
-
-# Visual Studio Code
-.vscode/
-
-# Vagrant
-.vagrant/
